debug layout issues with navbar

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -49,6 +49,15 @@ body {
   background-color: black;
 }
 
+/* left and right sidebar styles */
+
+.col-sm-2 {
+  background-color: #ffffff;
+}
+.col-sm-3 {
+  background-color: #ffffff;
+}
+
 /* set faded blue background color, white text and some padding */
 
 footer {
