--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -14,7 +14,6 @@
   background-color: #3b5998;
   border: 0;
   border-radius: 0;
-  padding: 10px;
     p {
       font-family: 'Noto Sans SC', sans-serif;
       font-size: 40px;
